# lattice

./: .dockerignore  .env.example  .envrc  .gitignore  .sops.yaml  AGENTS.md  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/bridge/: Cargo.toml  README.md
apps/bridge/src/: lib.rs  main.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli.rs
apps/daemon/: Cargo.toml  README.md
apps/daemon/src/: api.rs  config.rs  dataset_api.rs  embed_host.rs  error.rs  http.rs  idle.rs  lease.rs  lib.rs  main.rs  mcp.rs  preferences.rs  schedule.rs  server.rs  spawn.rs  voice_host.rs
apps/daemon/tests/: contract.rs  http_api.rs  idle_shutdown.rs  lifecycle_measure.rs  voice_contract.rs  voice_crash_isolation.rs
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/embed-host/: Cargo.toml  README.md  build.rs
apps/embed-host/proto/: embed_host.proto
apps/embed-host/src/: client.rs  error.rs  framing.rs  install.rs  lib.rs  main.rs  server.rs  spec.rs
apps/embed-host/tests/: host_uds.rs
apps/voice-host-macos/: Cargo.toml  README.md
apps/voice-host-macos/src/: client.rs  convert.rs  error.rs  lib.rs  main.rs  server.rs
apps/voice-host-macos/tests/: host_uds.rs
crates/lattice-arrow-transport/: Cargo.toml  README.md
crates/lattice-arrow-transport/src/: cancel.rs  convert.rs  encode.rs  error.rs  lib.rs  limits.rs  schema_meta.rs  tests.rs
crates/lattice-audio/: Cargo.toml
crates/lattice-audio-macos/: Cargo.toml  README.md  build.rs
crates/lattice-audio-macos/include/: lattice_audio_bridge.h
crates/lattice-audio-macos/src/: bridge.rs  error.rs  ffi.rs  lib.rs  provider.rs
crates/lattice-audio-macos/swift/: .gitignore  Package.swift
crates/lattice-audio-macos/tests/: live_capture.rs
crates/lattice-audio/src/: error.rs  event.rs  format.rs  frame.rs  lib.rs  provider.rs  queue.rs  ring.rs
crates/lattice-client/: Cargo.toml
crates/lattice-client/src/: client.rs  daemon.rs  embedded.rs  error.rs  events.rs  handshake.rs  lib.rs
crates/lattice-client/tests/: contract.rs
crates/lattice-commands/: Cargo.toml
crates/lattice-commands/src/: artifact.rs  canvas.rs  command.rs  contracts.rs  derived.rs  engine.rs  error.rs  history.rs  lib.rs  link_repair.rs  proposal.rs  propose_helpers.rs  relationship.rs  revisions.rs  task.rs  template.rs  tests.rs  trash.rs  workflow.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: error.rs  home.rs  ignore.rs  lib.rs  link_repair.rs  links.rs  manifest.rs  resource.rs  resource_runtime.rs  template.rs  template_catalog.generated.rs  validate.rs  watcher.rs  workspace.rs
crates/lattice-core/tests/: resource_runtime_conformance.rs
crates/lattice-data/: Cargo.toml
crates/lattice-data/src/: action.rs  app.rs  binding.rs  csv.rs  data_app.rs  error.rs  form.rs  formula.rs  interface.rs  json_import.rs  lib.rs  relation_target.rs  tabular.rs  tests.rs  types.rs  view.rs  xlsx.rs
crates/lattice-datasets/: Cargo.toml  README.md
crates/lattice-datasets/examples/: seed_demo_events.rs  seed_demo_orders.rs  seed_demo_places.rs
crates/lattice-datasets/src/: annotations.rs  error.rs  import.rs  lib.rs  manifest.rs  package.rs  partition.rs  tests.rs
crates/lattice-duckdb/: Cargo.toml  README.md
crates/lattice-duckdb/src/: batch.rs  engine.rs  error.rs  lib.rs  path.rs  profile.rs  tests.rs
crates/lattice-embedding/: Cargo.toml
crates/lattice-embedding/src/: download.rs  error.rs  lib.rs  manifest.rs  paths.rs  pinned.rs  provider.rs  specification.rs  status.rs
crates/lattice-env/: Cargo.toml
crates/lattice-env/src/: error.rs  lib.rs  path_util.rs  provider.rs
crates/lattice-handlers/: Cargo.toml
crates/lattice-handlers/src/: error.rs  home.rs  lib.rs  page.rs  path.rs  search.rs  workspace.rs
crates/lattice-index/: Cargo.toml
crates/lattice-index/src/: catalog.rs  chunks.rs  embedding.rs  error.rs  extract.rs  hybrid.rs  index.rs  lexical.rs  lib.rs  links.rs  paths.rs  provenance.rs  record.rs  schema.rs  semantic.rs  types.rs  vector.rs
crates/lattice-index/tests/: search_eval.rs  search_eval_qwen.rs
crates/lattice-kernel/: Cargo.toml  README.md
crates/lattice-kernel/bridge/: lattice_ipykernel_bridge.py
crates/lattice-kernel/src/: cwd.rs  discover.rs  error.rs  lib.rs  map.rs  protocol.rs  session.rs
crates/lattice-profile/: Cargo.toml
crates/lattice-profile/src/: lib.rs  settings.rs  state.rs
crates/lattice-protocol/: Cargo.toml  build.rs
crates/lattice-protocol/proto/: lattice.proto
crates/lattice-protocol/src/: error.rs  framing.rs  lib.rs
crates/lattice-protocol/tests/: framing.rs  golden.rs
crates/lattice-publish/: Cargo.toml
crates/lattice-publish/src/: error.rs  export.rs  lib.rs  markdown.rs  snapshot.rs  theme.rs
crates/lattice-publish/tests/: export_tests.rs
crates/lattice-runtime/: Cargo.toml
crates/lattice-runtime/src/: error.rs  events.rs  idempotency.rs  index_apply.rs  lease.rs  lib.rs  semantic.rs  session.rs  watch.rs
crates/lattice-storage/: Cargo.toml
crates/lattice-storage/src/: atomic.rs  error.rs  journal.rs  lib.rs  revision.rs  store.rs  tests.rs  writer.rs
crates/lattice-terminal/: Cargo.toml
crates/lattice-terminal/src/: error.rs  lib.rs  session.rs  shell.rs
crates/lattice-theme/: Cargo.toml
crates/lattice-theme/src/: appearance.rs  builtin.rs  discover.rs  document.rs  error.rs  flatten.rs  lib.rs  override_file.rs  resolve.rs  tests.rs
crates/lattice-voice/: Cargo.toml
crates/lattice-voice-macos/: Cargo.toml  README.md  build.rs
crates/lattice-voice-macos/include/: lattice_voice_bridge.h
crates/lattice-voice-macos/src/: bridge.rs  error.rs  ffi.rs  lib.rs  provider.rs
crates/lattice-voice-macos/swift/: .gitignore  Package.resolved  Package.swift
crates/lattice-voice-macos/tests/: LIVE_RESULTS.md  live_asr.rs
crates/lattice-voice/src/: context_builder.rs  endpoint.rs  error.rs  final_model_memory.rs  in_process.rs  independent_final.rs  lib.rs  normalize.rs  protocol.rs  provider.rs  session.rs  utterance_buffer.rs
(+881 files in other folders)
