[workspace]
resolver = "2"
members = [
    "apps/cli",
    "crates/lattice-core",
    "crates/lattice-storage",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
lattice-core = { path = "crates/lattice-core" }
lattice-storage = { path = "crates/lattice-storage" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
walkdir = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
