[workspace]
resolver = "2"
members = [
    "apps/cli",
    "crates/lattice-core",
    "crates/lattice-storage",
    "crates/lattice-commands",
    "crates/lattice-index",
    "crates/lattice-data",
    "crates/lattice-theme",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
lattice-core = { path = "crates/lattice-core" }
lattice-storage = { path = "crates/lattice-storage" }
lattice-commands = { path = "crates/lattice-commands" }
lattice-index = { path = "crates/lattice-index" }
lattice-data = { path = "crates/lattice-data" }
lattice-theme = { path = "crates/lattice-theme" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
walkdir = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
trash = "5"
dirs = "6"
# `macos_kqueue` (not the default FSEvents backend) avoids multi-second
# event-delivery latency observed under this repo's sandboxed macOS dev
# environment; kqueue talks to the kernel directly instead of through the
# fseventsd daemon. Behavior is equivalent to the default on Linux/Windows.
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-full = { version = "0.7", default-features = false, features = [
    "macos_kqueue",
] }
