[workspace]
resolver = "2"
members = [
    "apps/bridge",
    "apps/cli",
    "apps/embed-host",
    "crates/lattice-core",
    "crates/lattice-profile",
    "crates/lattice-storage",
    "crates/lattice-commands",
    "crates/lattice-index",
    "crates/lattice-embedding",
    "crates/lattice-data",
    "crates/lattice-theme",
    "crates/lattice-handlers",
    "crates/lattice-terminal",
    "crates/lattice-voice",
    "crates/lattice-voice-macos",
    "crates/lattice-protocol",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
lattice-core = { path = "crates/lattice-core" }
lattice-profile = { path = "crates/lattice-profile" }
lattice-storage = { path = "crates/lattice-storage" }
lattice-commands = { path = "crates/lattice-commands" }
lattice-index = { path = "crates/lattice-index" }
lattice-embedding = { path = "crates/lattice-embedding" }
lattice-embed-host = { path = "apps/embed-host" }
lattice-data = { path = "crates/lattice-data" }
lattice-theme = { path = "crates/lattice-theme" }
lattice-handlers = { path = "crates/lattice-handlers" }
lattice-terminal = { path = "crates/lattice-terminal" }
lattice-voice = { path = "crates/lattice-voice" }
lattice-voice-macos = { path = "crates/lattice-voice-macos" }
lattice-protocol = { path = "crates/lattice-protocol" }
prost = "0.14"
prost-build = "0.14"
tokio-util = { version = "0.7", features = ["codec"] }
# Cross-platform PTY for the embedded terminal (ADR 0039); WezTerm's portable-pty.
bytes = "1"
async-trait = "0.1"
portable-pty = "0.9"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
walkdir = "2"
# Gitignore-style matching for `lattice.yaml` `ignore:` patterns (MIT/Unlicense).
ignore = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
trash = "5"
dirs = "6"
# `macos_kqueue` (not the default FSEvents backend) avoids multi-second
# event-delivery latency observed under this repo's sandboxed macOS dev
# environment; kqueue talks to the kernel directly instead of through the
# fseventsd daemon. Behavior is equivalent to the default on Linux/Windows.
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-full = { version = "0.7", default-features = false, features = [
    "macos_kqueue",
] }
