[package]
name = "lattice-bridge"
description = "Localhost HTTP bridge for lattice-handlers (browser demo / headless cell)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lattice-bridge"
path = "src/main.rs"

[dependencies]
lattice-handlers.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
lattice-core = { workspace = true }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
