[package]
name = "lattice-daemon"
description = "latticed: long-lived Lattice daemon over a private Unix-domain socket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "lattice_daemon"
path = "src/lib.rs"

[[bin]]
name = "latticed"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
dirs.workspace = true
lattice-client.workspace = true
lattice-core.workspace = true
lattice-embed-host.workspace = true
lattice-embedding.workspace = true
lattice-handlers.workspace = true
lattice-index.workspace = true
lattice-profile.workspace = true
lattice-protocol.workspace = true
lattice-runtime.workspace = true
lattice-voice.workspace = true
lattice-voice-host.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time", "process"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
lattice-handlers.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time", "process"] }
tower = { version = "0.5", features = ["util"] }
