[package]
name = "lattice-embed-host"
description = "Isolated embedding inference host for Lattice (fake + optional llama.cpp)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lattice-embed-host"
path = "src/main.rs"

[features]
default = []
# Optional llama.cpp + Metal (macOS) backend. See README for build notes.
# Keeps default CI offline: fake backend needs no GGUF and no native link.
llama-cpp = ["dep:llama-cpp-2"]

[dependencies]
lattice-embedding.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
hex.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
# Metal is the Lattice Phase-1 target (Apple Silicon). On other OSes the feature
# is ignored by llama-cpp-sys; CPU inference still links.
llama-cpp-2 = { version = "0.1.151", optional = true, default-features = true, features = ["metal"] }

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "time"] }
