[package]
name = "lattice-voice-host"
description = "Isolated macOS voice inference host for Lattice (null + optional FluidAudio)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lattice-voice-host"
path = "src/main.rs"

[features]
default = []
# Optional FluidAudio / Parakeet backend via lattice-voice-macos (macOS only).
fluidaudio = ["dep:lattice-voice-macos", "lattice-voice-macos/link-bridge"]

[dependencies]
lattice-protocol.workspace = true
lattice-voice.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
lattice-voice-macos = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "time"] }
