[package]
name = "lattice-arrow-transport"
description = "Bounded Arrow IPC transport for Lattice analytical query results"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arrow.workspace = true
lattice-duckdb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
