[package]
name = "lattice-core"
description = "Workspace discovery, manifests, resource model, and validation for Lattice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true
walkdir.workspace = true
lattice-storage.workspace = true
lattice-profile.workspace = true
lattice-data.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
