[package]
name = "lattice-datasets"
description = "Lattice `.dataset` analytical package open/create and validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
