[package]
name = "lattice-duckdb"
description = "Workspace-scoped DuckDB analytical query engine for Lattice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# DuckDB MIT; `bundled` compiles libduckdb from source (large first build, no
# system DuckDB required). Matches the rusqlite `bundled` pattern in this repo.
duckdb = { version = "~1.10504.0", features = ["bundled"] }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
