[package]
name = "lattice-duckdb"
description = "Workspace-scoped DuckDB analytical query engine for Lattice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# DuckDB MIT; `bundled` compiles libduckdb from source (large first build, no
# system DuckDB required). `parquet` statically links the Parquet extension so
# `read_parquet` works with `enable_external_access=false` (no autoinstall).
# Matches the rusqlite `bundled` pattern in this repo.
duckdb = { version = "~1.10504.0", features = ["bundled", "parquet"] }
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
