[package]
name = "lattice-env"
description = "Shared environment resolution (system, uv-project, nix stub) for kernels and tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
