[package]
name = "lattice-env"
description = "Shared environment resolution (system, uv-project, nix) for kernels and tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
