[package]
name = "lattice-index"
description = "Derived workspace search index (SQLite FTS5) for Lattice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lattice-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
