[package]
name = "lattice-protocol"
description = "Versioned Protobuf IPC contract and framing for Lattice daemon clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio-util = { workspace = true, features = ["codec"] }

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored = "3"

[dev-dependencies]
hex = "0.4"
