[package]
name = "lattice-runtime"
description = "Long-lived LatticeRuntime and workspace sessions for embedded and daemon hosts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lattice-commands.workspace = true
lattice-core.workspace = true
lattice-embedding.workspace = true
lattice-index.workspace = true
libc = "0.2"
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
