[package]
name = "lattice-storage"
description = "Atomic file materialization and crash-recovery journal for Lattice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
rusqlite.workspace = true
sha2.workspace = true
hex.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
