[package]
name = "lattice-theme"
description = "Theme YAML schema, resolution, and appearance settings for Lattice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
lattice-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
