[package]
name = "lattice-desktop"
description = "Lattice desktop shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "lattice_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
lattice-theme.workspace = true
serde.workspace = true
serde_json.workspace = true
lattice-core.workspace = true
lattice-commands.workspace = true
lattice-storage.workspace = true
lattice-index.workspace = true
lattice-data.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true

[dev-dependencies]
tempfile = "3"
rusqlite = { workspace = true }
