[package]
name = "lattice-desktop"
description = "Lattice desktop shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "lattice_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Enables the Playwright socket bridge for native WebView E2E / perf.
# Keep off for normal runs; use `pnpm tauri:dev:e2e` or `--features e2e-testing`.
e2e-testing = []
# Local FluidAudio dictation (macOS arm64). Links the Swift bridge via
# `lattice-voice-macos/link-bridge`.
voice = ["dep:lattice-voice", "dep:lattice-voice-macos", "dep:bytes", "lattice-voice-macos/link-bridge"]
# Voice is opt-in so Linux CI and machines without the Swift dylib still build.
# Dev: `cargo tauri dev --features voice` (or pnpm script).
default = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
# Always linked so `playwright:default` stays in the ACL schema; only initialized
# when the `e2e-testing` feature is enabled (see lib.rs).
tauri-plugin-playwright = "0.4.1"
lattice-theme.workspace = true
lattice-profile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
lattice-core.workspace = true
lattice-commands.workspace = true
lattice-storage.workspace = true
lattice-index.workspace = true
lattice-data.workspace = true
lattice-handlers.workspace = true
lattice-runtime.workspace = true
lattice-terminal.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
tokio.workspace = true
# Optional: enabled by the `voice` feature (macOS FluidAudio path).
lattice-voice = { workspace = true, optional = true }
lattice-voice-macos = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { workspace = true }
