[package]
name = "lattice-desktop"
description = "Lattice desktop shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "lattice_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Enables the Playwright socket bridge for native WebView E2E / perf.
# Keep off for normal runs; use `pnpm tauri:dev:e2e` or `--features e2e-testing`.
e2e-testing = []
# Native capture + latticed thin client (preferred M4 path). Does not link
# FluidAudio; set LATTICE_VOICE_DAEMON=1 to require daemon-only operation.
voice = [
    "dep:lattice-voice",
    "dep:lattice-audio",
    "dep:lattice-audio-macos",
    "dep:lattice-client",
    "dep:lattice-protocol",
    "dep:bytes",
    "dep:dirs",
    "dep:uuid",
    "lattice-audio-macos/link-bridge",
]
# Transitional in-process FluidAudio fallback when latticed/voice-host is down.
# Production daemon-only builds: `--features voice` (omit voice-embedded).
voice-embedded = [
    "voice",
    "dep:lattice-voice-macos",
    "lattice-voice-macos/link-bridge",
]
# Voice is opt-in so Linux CI and machines without the Swift dylib still build.
# Dev with fallback: `cargo tauri dev --features voice-embedded` (pnpm tauri:dev).
default = []

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
# Always linked so `playwright:default` stays in the ACL schema; only initialized
# when the `e2e-testing` feature is enabled (see lib.rs).
tauri-plugin-playwright = "0.4.1"
lattice-theme.workspace = true
lattice-profile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
lattice-core.workspace = true
lattice-commands.workspace = true
lattice-storage.workspace = true
lattice-index.workspace = true
lattice-data.workspace = true
lattice-datasets.workspace = true
lattice-duckdb.workspace = true
lattice-arrow-transport.workspace = true
lattice-handlers.workspace = true
lattice-runtime.workspace = true
lattice-terminal.workspace = true
arrow.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
tokio.workspace = true
# Optional: enabled by the `voice` / `voice-embedded` features.
lattice-voice = { workspace = true, optional = true }
lattice-voice-macos = { workspace = true, optional = true }
lattice-audio = { workspace = true, optional = true }
lattice-audio-macos = { workspace = true, optional = true }
lattice-client = { workspace = true, optional = true }
lattice-protocol = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { workspace = true }
